<resources>
    <string name="app_name">Ex0407</string>
    <string name="btnP">+</string>
    <string name="btnM">-</string>
    <string name="num">0</string>

    <!-- activity_main2.xml -->
    <string name="plus">더하기</string>
    <string name="minus">빼기</string>
    <string name="mul">곱하기</string>
    <string name="div">나누기</string>
    <string name="tvResult">연산결과 : 0</string>
    <string name="etNum1">첫번째 숫자 입력</string>
    <string name="etNum2">두번째 숫자 입력</string>

    <!-- activity_main3.xml -->
    <string name="btnChange_text">감추기</string>

    <!-- activity_main4.xml -->
    <string name="btnPre_text">이전</string>
    <string name="btnNext_text">다음</string>

    <!-- activity_main5.xml -->
    <string name="title_label">주사위게임</string>
    <string name="tvDice">DICE</string>
    <string name="btnShake_text">흔들기</string>
    <string name="tvUser1_text">0</string>
    <string name="tvUser2_text">0</string>
    <string name="vs_label">:</string>
</resources>
