<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnM"
        app:layout_constraintBottom_toBottomOf="@+id/num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/num"
        app:layout_constraintTop_toTopOf="@+id/num" />

    <Button
        android:id="@+id/btnP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnP"
        app:layout_constraintBottom_toBottomOf="@+id/num"
        app:layout_constraintEnd_toStartOf="@+id/num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/num" />

</androidx.constraintlayout.widget.ConstraintLayout>